/***********************************************************************
X3 ChangeLog

2008-03-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Added roulette command.

	* src/chanserv.h: Added roulette command.

	* src/mod-memoserv.c: Added email sending functionality when
	new memos are sent.

2008-03-24  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix 1 param auth for ldap libs available but not
	enabled, case. Thanks jobe.

2008-03-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Add svsnick command

	* src/opserv.help: add help for svsnick and improve menu a bit

	* src/nickserv.c: re-enable 1 param auth if not using ldap.

2008-03-02  Alex Schumann  <rubin@afternet.org>

	* src/spamserv.c: Possible fix for sf bug 1905760 (spamserv
	kill/reconnect segfault)

2007-07-31  Alex Schumann  <rubin@afternet.org>

        * src/proto-p10.c: ignore ALIST messages

2007-05-08  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: fix authentication bug with ldap by temporarily
	removing account-less authentication.

	* src/nickserv.help: fix help file to reflect change

2007-05-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Allow opers to override required_mark. Also added
	SJOIN (undocumented) so opers can join IRC into channels where its
	needed as WebTV can only message clients in channels they are in.

2007-06-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Added JOIN and PART.

	* src/mod-webtv.help: Added JOIN and PART.

2007-05-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/mod-webtv.c: Added NICK and WHOIS commands. As well as 2 x3.conf
	config options, required_mark and valid_marks.

	* src/mod-webtv.help: Added INDEX, NICK, and WHOIS.

2007-05-08  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Run autogen.sh.

	* configure.in: Tweaks for google core dumper 1.1.

	* x3.conf.example: Basic webtv module section.

	* src/config.h.in: Run autogen.sh.
